--- a/local-config.properties
+++ b/local-config.properties
@@ -6,8 +6,10 @@
 env=local
 
 # log
-log.dir=d:/logs/arkcore
+log.dir=d:/logs/starter
+log.systemname=starter
 log.level=debug
+log.encoder.pattern=%d{yyyy-MM-dd HH:mm:ss.SSS},%-5level,[%thread]%logger{72}:[%line] - %msg%n
 
 
 # dubbo
