reorg web project, all put in web-home, using different template engine only in assembly, and move web-xxx.xml to WEB-INF/spring-servlet.xml

--- a/assembly/freemarker/src/main/webapp/WEB-INF/web.xml
+++ b/assembly/freemarker/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
 			classpath*:/spring/core-*.xml,
 			classpath*:/spring/biz-*.xml,
 			classpath*:/spring/dubbo-*.xml,
+			classpath*:/spring/web-*.xml,
 			<!-- for starter only project, need starter-common-*.xml -->
 			classpath*:/spring/starter-common-*.xml
 			<!-- for starter only project, need starter-dubbo-*.xml -->
@@ -48,7 +49,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath*:/spring/web-freemarker.xml</param-value>
+			<param-value>/WEB-INF/spring-servlet.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
