--- a/assembly/velocity/src/main/webapp/WEB-INF/web.xml
+++ b/assembly/velocity/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
-	<display-name>starter-pcweb</display-name>
+	<display-name>starter-wechat</display-name>
 
 	<!-- context config, need scan all components. starter may need special starter-??-*.xml -->
 	<context-param>
@@ -12,6 +12,7 @@
 			classpath*:/spring/core-*.xml,
 			classpath*:/spring/biz-*.xml,
 			classpath*:/spring/dubbo-*.xml,
+			classpath*:/spring/web-*.xml,
 			<!-- for starter only project, need starter-common-*.xml -->
 			classpath*:/spring/starter-common-*.xml
 			<!-- for starter only project, need starter-dubbo-*.xml -->
@@ -48,7 +49,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath*:/spring/web-velocity.xml</param-value>
+			<param-value>/WEB-INF/spring-servlet.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
