--- a/web/home/pom.xml
+++ b/web/home/pom.xml
@@ -57,6 +57,16 @@
 			<artifactId>jedis</artifactId>
 		</dependency>
 
+		<!-- Template engine -->
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity-tools</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
