--- a/all-config.properties
+++ b/all-config.properties
@@ -3,7 +3,7 @@
 ##########################################################
 
 # env
-env=local
+env=all
 
 # log
 log.dir=d:/logs/starter
@@ -32,3 +32,17 @@ druid.minIdle=1
 druid.slowSqlMillis=500
 druid.statementExecutableSqlLogEnable=true
 
+# distributed session
+session.max.inactive.interval.in.seconds=1800
+session.redis.host=192.168.188.102
+session.redis.port=6379
+session.cookie.name=STARTERSESSIONID
+session.cookie.domain=
+session.cookie.path=/
+session.cookie.httponly=true
+session.cookie.secure=false
+session.cookie.maxage=-1
+
+# distributed cache
+cache.redis.host=192.168.188.102
+cache.redis.port=6379
