--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,9 @@
 	<packaging>pom</packaging>
 
 	<name>yaen-starter</name>
-	<description>yaen starter with spring framework 4.2 and jdk 1.8</description>
+	<description>yaen starter with spring framework 4.2 and jdk 1.8.
+
+all of the starter-*-*.xml is for sample use, the child should set the xml  on there own.</description>
 
 	<modules>
 		<module>common</module>
@@ -30,8 +32,8 @@
 	</distributionManagement>
 
 	<properties>
-		<!-- enviourment default to local, related to properties file -->
-		<env>local</env>
+		<!-- environment default to all for starter, as this is jar build, related to properties file -->
+		<env>all</env>
 		<yaen-starter.version>1.2.0-SNAPSHOT</yaen-starter.version>
 
 		<!-- jdk version -->
@@ -54,7 +56,7 @@
 		<poi.version>3.12</poi.version>
 		<lucene.version>4.8.0</lucene.version>
 		<assertj.version>1.6.1</assertj.version>
-		<freemarker.version>2.3.20</freemarker.version>
+		<freemarker.version>2.3.24-incubating</freemarker.version>
 		<junit.version>4.12</junit.version>
 		<dbunit.version>2.4.7</dbunit.version>
 		<javax.servlet-api.version>3.1-b05</javax.servlet-api.version>
