--- a/pom.xml
+++ b/pom.xml
@@ -861,12 +861,15 @@ all of the starter-*-*.xml is for sample use, the child should set the xml  on t
 				<version>${javax.servlet.jsp-api.version}</version>
 				<scope>provided</scope>
 			</dependency>
+
+			<!-- jsp -->
 			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>jstl</artifactId>
 				<version>${jstl.version}</version>
 			</dependency>
 
+			<!-- others -->
 			<dependency>
 				<groupId>org.codehaus.groovy</groupId>
 				<artifactId>groovy-all</artifactId>
@@ -923,9 +926,9 @@ all of the starter-*-*.xml is for sample use, the child should set the xml  on t
 				<version>1.9.1</version>
 			</dependency>
 			<dependency>
-				<groupId>xstream</groupId>
+				<groupId>com.thoughtworks.xstream</groupId>
 				<artifactId>xstream</artifactId>
-				<version>1.1.3</version>
+				<version>1.4.9</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jodd</groupId>
