move redis client to integration layer

--- a/common/util/pom.xml
+++ b/common/util/pom.xml
@@ -192,6 +192,12 @@
 			<artifactId>httpmime</artifactId>
 		</dependency>
 
+		<!-- redis -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+		</dependency>
+
 		<!-- Lucene -->
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
