add  comments to all pom

--- a/biz/implement/pom.xml
+++ b/biz/implement/pom.xml
@@ -9,6 +9,7 @@
 
 	<artifactId>yaen-starter-biz-implement</artifactId>
 	<name>yaen-starter-biz-implement</name>
+	<description>biz implement for facade, only for facade !!</description>
 
 	<build>
 		<filters>
