--- a/test/test/pom.xml
+++ b/test/test/pom.xml
@@ -9,6 +9,7 @@
 
 	<artifactId>yaen-starter-test-test</artifactId>
 	<name>yaen-starter-test-test</name>
+	<description>unit test with spring, need UnitTester</description>
 
 	<build>
 		<filters>
