--- a/biz/implement/pom.xml
+++ b/biz/implement/pom.xml
@@ -22,5 +22,9 @@
 			<groupId>org.yaen</groupId>
 			<artifactId>yaen-starter-biz-shared</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.yaen</groupId>
+			<artifactId>yaen-starter-common-facade</artifactId>
+		</dependency>
 	</dependencies>
 </project>
