add autotest model

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,6 +16,6 @@
 		<module>model</module>
 		<module>service</module>
 		<module>model-wechat</module>
-		<module>service-wechat</module>
+		<module>model-autotest</module>
 	</modules>
 </project>
