--- a/core/model-autotest/pom.xml
+++ b/core/model-autotest/pom.xml
@@ -7,9 +7,9 @@
 		<version>1.3.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>yaen-starter-core-service-wechat</artifactId>
-	<name>yaen-starter-core-service-wechat</name>
-	<description>wechat service, for wechat model.</description>
+	<artifactId>yaen-starter-core-model-autotest</artifactId>
+	<name>yaen-starter-core-model-autotest</name>
+	<description>autotest model, used for auto test(with known result).</description>
 
 	<build>
 		<filters>
@@ -20,7 +20,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.yaen</groupId>
-			<artifactId>yaen-starter-core-model-wechat</artifactId>
+			<artifactId>yaen-starter-core-model</artifactId>
 		</dependency>
 	</dependencies>
 </project>
