--- a/test/test/pom.xml
+++ b/test/test/pom.xml
@@ -23,5 +23,9 @@
 			<artifactId>yaen-starter-biz-implement</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.yaen</groupId>
+			<artifactId>yaen-starter-core-model-autotest</artifactId>
+		</dependency>
 	</dependencies>
 </project>
