--- a/web/home/pom.xml
+++ b/web/home/pom.xml
@@ -16,6 +16,10 @@
 			<groupId>org.yaen</groupId>
 			<artifactId>yaen-starter-biz-shared</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.yaen</groupId>
+			<artifactId>yaen-starter-core-model-ex</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
