--- a/core/model-one/pom.xml
+++ b/core/model-one/pom.xml
@@ -7,9 +7,9 @@
 		<version>1.3.1-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>yaen-starter-core-model-ex</artifactId>
-	<name>yaen-starter-core-model-ex</name>
-	<description>ex model, additional to core model.</description>
+	<artifactId>yaen-starter-core-model-one</artifactId>
+	<name>yaen-starter-core-model-one</name>
+	<description>one model, additional to core model.</description>
 
 	<build>
 		<filters>
