--- a/core/pom.xml
+++ b/core/pom.xml
@@ -15,7 +15,7 @@
 	<modules>
 		<module>model</module>
 		<module>service</module>
-		<module>model-ex</module>
+		<module>model-one</module>
 		<module>model-wechat</module>
 	</modules>
 </project>
