--- a/common/facade/pom.xml
+++ b/common/facade/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.yaen</groupId>
 		<artifactId>yaen-starter-common</artifactId>
-		<version>1.3.1-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>yaen-starter-common-facade</artifactId>
