--- a/core/model-wechat/pom.xml
+++ b/core/model-wechat/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.yaen</groupId>
 		<artifactId>yaen-starter-core</artifactId>
-		<version>1.3.1-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>yaen-starter-core-model-wechat</artifactId>
