--- a/web/home/pom.xml
+++ b/web/home/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.yaen</groupId>
 		<artifactId>yaen-starter-web</artifactId>
-		<version>1.3.1-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>yaen-starter-web-home</artifactId>
