--- a/pom.xml
+++ b/pom.xml
@@ -1017,14 +1017,15 @@
 						<compilerArgument>-Xlint:all</compilerArgument>
 					</configuration>
 				</plugin>
+				<!-- include source in jar, not default phase, need add to plugins section -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
-					<version>2.4</version>
+					<version>3.0.1</version>
 					<executions>
 						<execution>
 							<id>attach-sources</id>
-							<phase>package</phase>
+							<phase>verify</phase>
 							<goals>
 								<goal>jar-no-fork</goal>
 							</goals>
@@ -1061,6 +1062,12 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+			</plugin>
+		</plugins>
 	</build>
 
 </project>
